# ffmpeg-gui-pyqt6

./: .envrc.example  .gitignore  BUILD_WINDOWS_NATIVE.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_COMPILATION_ISSUE.md  GUI_pyqt6_WINFF.py  GUI_tkinter_WINFF.py  INSTALL_WINDOWS.md  LICENSE  Makefile  PLATFORM_BUILDS.md  README.md  SCRIPTS_INFO.md  SECURITY.md  WINDOWS_BUILD_FIX.md  build.py  build_info.md  build_macos.py  build_summary.md  build_windows.py  build_windows_native.py  package-lock.json  pyproject.toml  requirements.txt  run_macos.sh  run_windows.bat  setup_macos.sh  setup_windows.bat  utils_safe_extract.py
.githooks/: pre-commit
.github/: CONTRIBUTING_RULES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_and_release_template.yml  ci.yml  release.yml
tests/: conftest.py  test_command_build.py  test_safe_extract.py
